--- a/static/css/style_platform.css
+++ b/static/css/style_platform.css
@@ -1,37 +1,26 @@
 div.layout {
     display: grid;
-    height: 100%;
-    grid-template-columns: minmax(200px, 300px) 1fr 500px;
+    grid-template-columns: 1fr var(--width-sidebar);
     grid-template-rows: 1fr;
+    height: 100%;
 }
 div.layout div.map {
     z-index: var(--index-back);
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 1/2;
-}
-div.layout div.left {
-    z-index: var(--index-front);
-    grid-column: 1/2;
-    grid-row: 1/2;
+    height: 100%;
 }
 div.layout div.right {
     z-index: var(--index-front);
-    grid-column: 3/4;
     grid-row: 1/2;
+    grid-column: 2/3;
     display: grid;
-    grid-template-rows: max-content 500px 200px;
-}
-div.layout div.right ul.taxonomy_classes {
-    height: 100%;
-    overflow-y: scroll;
-}
-div.layout div.log {
-    height: 100%;
-    overflow-y: auto;
+    grid-template-rows: 300px 1fr;
 }
 ul {
     list-style: none;
     padding-left: 20px;
+    margin: 0;
 }
 ul > li.collapsed > ul {
     display: none;
